--- a/style.css
+++ b/style.css
@@ -21,3 +21,11 @@ button {
     border: 1px solid black;
     font-weight: bold;
 }
+
+.jira-links{
+  color: white;
+}
+
+.otros-links {
+  color: white;
+}
