--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
   padding: 10;
   font-family: Arial, Helvetica, sans-serif;
   min-width: 800px;
-  background-color: #FE5C14;
+  background-color: white;
 }
 
 h1 {
