--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 10;
   font-family: Arial, Helvetica, sans-serif;
-  min-width: 800px;
+  min-width: 250px;
   background-color: #FE5C14;
 }
 
@@ -14,6 +14,14 @@ h2 {
   color: white;
 }
 
+input {
+    width: 100%;
+    padding: 10px;
+    box-sizing: border-box;
+    border: 1px solid #5f9341;
+    margin-bottom: 4px;
+}
+
 button {
     background: #FE5C14;
     color: white;
@@ -22,10 +30,8 @@ button {
     font-weight: bold;
 }
 
-.jira-links{
-  color: white;
-}
-
-.otros-links {
-  color: white;
+ul {
+    margin-top: 20px;
+    list-style: none;
+    padding-left: 0;
 }
