--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ input {
     margin-bottom: 4px;
 }
 
-.deleBtnn{
+.save-btn{
   float: right;
 }
 
@@ -32,6 +32,7 @@ button {
     padding: 10px 20px;
     border: none;
     font-weight: bold;
+    float: right;
 }
 
 ul {
